--- a/package.json
+++ b/package.json
@@ -1,27 +1,12 @@
 {
-  "name": "truemoney-auto-claim",
-  "version": "6.0.0",
-  "description": "Auto claim TrueMoney with tw-voucher (No Proxy)",
-  "main": "index.js",
-  "type": "commonjs",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "keywords": ["telegram", "truemoney"],
-  "author": "AutoClaim",
-  "license": "MIT",
   "dependencies": {
     "telegram": "^2.22.2",
-    "axios": "^1.6.2",
+    "axios": "^1.7.9",
     "express": "^4.18.2",
+    "body-parser": "^1.20.2",
     "jimp": "^0.22.10",
     "jsqr": "^1.4.0",
-    "input": "^1.0.1",
     "dotenv": "^16.3.1",
-    "body-parser": "^1.20.2",
-    "@fortune-inc/tw-voucher": "^1.0.0"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "@fortune-inc/tw-voucher": "latest"
   }
 }
